<resources>
    <string name="app_name">Reach Out</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="phone">Mobile Number</string>
    <string name="login_text">Enter your mobile number to continue</string>
    <string name="continue_text">Continue</string>
    <string name="error">Error</string>
    <string name="mobile_prefix">+91</string>
    <string name="verify">Verify</string>
    <string name="title_activity_otpverfication">OTPVerfication</string>
    <string name="enter_mobile_number">Enter Mobile Number To Continue</string>
    <string name="enter_10_digits_mob_number">Enter 10 digit mobile number</string>
    <string name="otp_verification_text">Enter 4-digit OTP (One Time Password) </string>
    <string name="resend_code">RESEND CODE</string>
    <string name="enter_4_digits">Enter 4-digit OTP continue</string>
    <string name="enter_valid_otp">Enter valid OTP</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="events">Events</string>
    <string name="service_history_home">Stores</string>
    <string name="service_name_book">Service</string>
    <string name="exit">EXIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="change_bike">Change Bike</string>
    <string name="book_sevice">Book Service</string>
    <string name="service_history">Service History</string>
    <string name="sos">SOS</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="search_city">Search City</string>
    <string name="search">Search</string>
    <string name="kawasaki_ninja">Kawasaki Ninja H2R</string>
    <string name="ramesh_kumar">Ramesh Kumar</string>
    <string name="mon_number">9800312421</string>
    <string name="feedback_history">Feedback History</string>
    <string name="log_out">LogOut</string>
    <string name="please_wait">Please Wait..</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="title_activity_book_service">BookService</string>
    <string name="book_service">Book Service</string>

    <string name="date_of_service">Date of service</string>
    <string name="dealer_ship_name">Dealership Name</string>

    <string name="branch_name">Branch Name</string>
    <string name="from_time">Time</string>
    <string name="to_time">To Time</string>
    <string name="city">City</string>
    <string name="dealer">Dealer</string>
    <string name="book_service_done">Book Service Done</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="last_service_dealer_info">Last Service Dealer information</string>
    <string name="kawasaki_limited_bangalore">Kawasaki limited, Bangalore</string>
    <string name="search_dealer_contact">Search Dealer Contact</string>

    <string name="profile_details">Profile Details</string>
    <string name="edit">Edit</string>
    <string name="bikes_registered">Bikes Registered</string>
    <string name="select_service_type">Please Select Service Type</string>
    <string name="select_pickup_required">Please Select PickUpRequired</string>
    <string name="please_enter_date">Please Enter Date</string>
    <string name="please_give_time">Please Give Time</string>
    <string name="please_give_to_date">Please Give To Date</string>
    <string-array name="month_name">
        <item>January</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
    </string-array>

    <string-array name="city_list">
        <item>Bangalore</item>

    </string-array>

    <string-array name="dealer_list">
        <item>Kawasaki Limited</item>
    </string-array>

    <style name="Color1SwitchStyle">
        <item name="colorControlActivated">@color/colorPrimary</item>
    </style>


    <string name="free_service">Free Service</string>
    <string name="periodic_service">Periodic Service</string>
    <string name="breakdown_repair">Breakdown \nRepair</string>
    <string name="washing">Washing</string>
    <string name="title_activity_sos">SOS</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="confirm">Confirm !</string>
    <string name="logout_confirmation">Are you sure you want to logout from app?</string>
    <string name="exit_confirmaton">Are you sure you want to exit from app?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="primary_bike">Primary Bike</string>
    <string name="select_primary_bike">Select/Switch ON one bike as Primary</string>
    <string name="pickup_required">PickUp Required</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="title_activity_search_city">SearchCity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="no_email">No Email</string>
    <string name="title_activity_service_history">ServiceHistory</string>
    <string name="loading">Loading</string>
    <string name="service_name">Service ID</string>
    <string name="dot">:</string>
    <string name="service_type">ServiceType</string>
    <string name="km_reading">KMreading</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Info">Information</string>
    <string name="service_number">Service Number</string>
    <string name="update">Update</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="service_advisor">ServiceAdvisor</string>
    <string name="Feed_back">Feed Back</string>
    <string name="submit">Submit</string>
    <string name="title_activity_remarks">RemarksActivity</string>
    <string name="Remarks">Remarks</string>
    <string name="title_activity_booking_details">BookingDetails</string>
    <string name="booking_details">Booking Details</string>
    <string name="title_activity_sos_search_city">SosSearchCity</string>
    <string name="title_activity_display_selected_image">DisplaySelectedImage</string>
    <string name="sign_in">Sign In</string>
    <string name="remove">Remove</string>
    <string name="date">Date</string>
    <string name="booking_id">Booking Id</string>
    <string name="title_activity_cancel_booking">CancelBooking</string>
    <string name="cancel_bkng">Cancel Booking</string>
    <string name="confirm_cancellation">Confirm Cancellation</string>
    <string name="reason">Reason</string>
    <string name="booking_number">Booking Number</string>
    <string name="booking_date">BookingDate</string>
    <string name="booking_branch">BookingBranch</string>
    <string name="service_date">Service Date</string>

</resources>
