<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layoutwhite_background"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingBottom="@dimen/space_15"
        android:paddingLeft="@dimen/space_5"
        android:paddingRight="@dimen/space_5"
        android:paddingTop="@dimen/space_10"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/space_15"
        android:paddingLeft="@dimen/space_5"
        android:paddingRight="@dimen/space_5"
        android:paddingTop="@dimen/space_15"
        android:text="@string/logout_confirmation"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_15"
        android:paddingLeft="@dimen/space_5"
        android:paddingRight="@dimen/space_5"
        android:paddingTop="@dimen/space_5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_logoutAppDialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_40"
                android:background="@drawable/buttongrey_rect"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_logoutAppDialog_ok"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space_40"
                android:background="@drawable/button_color"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
