<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.BookService"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_book_service">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:layout_marginTop="@dimen/space_10"
            android:textSize="@dimen/text_16"
            android:text="@string/service"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="3dp"
        android:layout_marginTop="@dimen/space_1"
        android:orientation="vertical">




            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/FreeServiceCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/WhiteCheck"
                        android:text="@string/free_service" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/periodicServiceCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/WhiteCheck"
                        android:text="@string/periodic_service" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/breakDownCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/WhiteCheck"
                        android:text="@string/breakdown_repair" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/washingCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/WhiteCheck"
                        android:text="@string/washing" />
                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>


                    </android.support.v7.widget.CardView>



</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_required"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:textSize="@dimen/text_16"/>


        <android.support.v7.widget.CardView
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_3"
            android:layout_margin="1dp"
            card_view:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxYesPickUp"
                android:text="@string/yes"/>

            </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxNoPickUp"
                        android:text="@string/no"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_service"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:textSize="@dimen/text_16"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <FrameLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/space_16"
              android:layout_marginRight="@dimen/space_16">



                <EditText
                    android:id="@+id/date"
                    android:editable="false"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                   />

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@drawable/report_date"
                  android:id="@+id/datePicker"
                  android:layout_gravity="end"/>

          </FrameLayout>
        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/from_time"
               android:layout_weight="2"
               android:layout_marginTop="@dimen/space_10"
               android:layout_marginLeft="@dimen/space_16"
               android:layout_marginRight="@dimen/space_16"
               android:textSize="@dimen/text_16"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/to_time"
               android:layout_weight="3"
               android:layout_marginTop="@dimen/space_10"
               android:layout_marginLeft="@dimen/space_16"
               android:layout_marginRight="@dimen/space_16"
               android:textSize="@dimen/text_16"/>

       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16">
            <EditText
                android:id="@+id/from_date"
                android:editable="false"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:focusable="false"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/report_date"
                android:id="@+id/fromDatePicker"
                android:layout_gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="3"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16">
            <EditText
                android:id="@+id/to_date"
                android:editable="false"
                android:layout_width="0dp"
                android:focusable="false"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/report_date"
                    android:id="@+id/todatePicker"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:textSize="@dimen/text_16"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/city"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cityName"
                android:focusable="false"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/search"
                android:id="@+id/search_city"
                android:layout_gravity="end"/>



        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:textSize="@dimen/text_16"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/dealer"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

           >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:focusable="false"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="@dimen/space_16"
                android:entries="@array/dealer_list"
                android:id="@+id/spinner_dealer">

            </Spinner>
        </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/save_continue"
        android:text="@string/save_continue"
        android:textSize="@dimen/text_16"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginLeft="@dimen/space_16"
        android:layout_marginRight="@dimen/space_16"
        android:background="@drawable/button_gradiant_color"
        android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
