<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutwhite_background"
    android:orientation="vertical"
    android:id="@+id/book_sheet_layout"

    android:layout_gravity="bottom"
    android:layout_marginLeft="@dimen/space_20"
    android:layout_marginRight="@dimen/space_20">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space_5">

        <ImageView
            android:id="@+id/iv_changePicDialog_close"
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
       />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/space_16"
            android:paddingLeft="@dimen/space_5"
            android:paddingRight="@dimen/space_5"
            android:paddingTop="@dimen/space_10"
            android:text="@string/profile_picture"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_16"
            />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_changePicDialog_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/space_20"
        android:layout_marginLeft="@dimen/space_20"
        android:padding="@dimen/space_5">

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera_dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5"
            android:text="@string/camera"
            android:textColor="@color/colorProfileDark"
            android:textSize="@dimen/text_16" />

</LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="13"
            android:layout_height="wrap_content"
            android:id="@+id/ll_changePicDialog_gallery"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/space_32"
                android:layout_height="@dimen/space_32"
                android:layout_gravity="center"
                android:src="@drawable/ic_gallery_dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_5"
                android:text="@string/gallery"
                android:layout_gravity="center"
                android:textColor="@color/colorProfileDark"
                android:textSize="@dimen/text_16" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ll_changePicDialog_remove"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/space_32"
                android:layout_height="@dimen/space_32"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera_dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_5"
                android:text="@string/remove"
                android:layout_gravity="center"
                android:textColor="@color/colorProfileDark"
                android:textSize="@dimen/text_16" />



        </LinearLayout>
    </LinearLayout>
</LinearLayout>