<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_ground_book"
        android:padding="@dimen/space_16"
        android:orientation="vertical">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/text_16"
           android:textColor="@color/colorWhite"
           android:text="@string/primary_bike"
           android:textAllCaps="true"
           android:textStyle="bold"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="@dimen/text_16"
           android:textColor="@color/colorChild"
           android:text="@string/select_primary_bike"
           android:textStyle="bold"/>

       <ImageView
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:background="@drawable/bike_image"
           android:layout_gravity="end"/>

</LinearLayout>


   <android.support.v7.widget.CardView
       android:id="@+id/card_view"
       android:layout_gravity="center"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       card_view:cardCornerRadius="3dp"
       android:layout_marginTop="@dimen/space_16"
       android:layout_marginLeft="@dimen/space_16"
       android:layout_marginRight="@dimen/space_16"
       card_view:contentPadding="10dp">
<LinearLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_gravity="center"
   android:orientation="vertical">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/kawasaki_ninja"
           android:textColor="@color/colorText"
           android:textAllCaps="true"
           android:textSize="@dimen/text_16"/>
       <Switch
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:theme="@style/Theme.ToogleTheme"
           android:id="@+id/bike_switch"
          />
       </FrameLayout>
   </LinearLayout>
       <View
           android:layout_width="match_parent"
           android:layout_height="2dp"
           android:background="#E6E6E6"/>


       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/bike_image"
           android:layout_gravity="center"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorChild"
           android:textSize="@dimen/text_16"
           android:layout_gravity="center"
           android:id="@+id/register_number"
           tools:text="Register Number"/>
</LinearLayout>
   </android.support.v7.widget.CardView>




</LinearLayout>